package com.backbase.api.common;

public enum PaymentType {
    CR,
    DB
}
