@startuml

interface BackbaseData

class BranchInfo {
    - String bankName;
    - String bankSwiftCode;
    - String bankIfscCode;
    - String bankBranchCode;
}

class CreditInfo {
    - String bankName;
    - String branchCode;
    - String accountNumber;
}

class DebitInfo {
    - String bankName;
    - String accountNumber;
    - String branchCode;
    - String purpose
}

class PaymentInfo  {
    - double amount;
    - PaymentType paymentType;
    - PaymentTypeInfo paymentTypeInfo;
}

class PaymentType

class PaymentTypeInfo

class TransactionInfo  {
    - String transactionId;
    - String date;
    - PaymentInfo paymentInfo;
}


BackbaseData <|-- BranchInfo 
BackbaseData <|-- PaymentTypeInfo
PaymentTypeInfo <|-- CreditInfo 
PaymentTypeInfo <|-- DebitInfo 
BackbaseData <|-- TransactionInfo 
BackbaseData <|-- PaymentType 

TransactionInfo *-- PaymentInfo
PaymentInfo *-- PaymentType
PaymentInfo *-- PaymentTypeInfo

@enduml